// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CI: Render feature restriction banner Free Account Do not show any banner by default 1`] = `<div />`;

exports[`CI: Render feature restriction banner Free Account Show warning banner when 90% usage of free total builds 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main bannerContainer StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between StyledProps--background-white StyledProps--padding-left-large StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
    style="height: 56px;"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--flex"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-primary10 StyledProps--margin-right-medium"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--intent-primary StyledProps--margin-right-xsmall StyledProps--color StyledProps--color-primary7"
          data-icon="info-message"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12 21.494c-5.385 0-9.75-4.365-9.75-9.75s4.365-9.75 9.75-9.75 9.75 4.365 9.75 9.75a9.704 9.704 0 01-1.55 5.276l1.484 3.44a.75.75 0 01-.985.986l-3.447-1.486A9.704 9.704 0 0112 21.494zM10.876 7.62a1.125 1.125 0 102.25 0 1.125 1.125 0 00-2.25 0zM12 10.225a.75.75 0 00-.75.75v4.502a.75.75 0 001.5 0v-4.502a.75.75 0 00-.75-.75z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        pipeline.featureRestriction.maxTotalBuilds90PercentLimit
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
        style="width: 130px;"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.explorePlans
        </span>
      </button>
    </div>
    <button
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`CI: Render feature restriction banner Free Account Show warning banner when 100/100 usage of free monthly builds 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main bannerContainer upgradeRequiredBanner StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between StyledProps--padding-left-large StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
    style="height: 56px;"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--flex"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-primary10 StyledProps--margin-right-medium"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--intent-primary StyledProps--margin-right-xsmall StyledProps--color StyledProps--color-orange900"
          data-icon="upgrade-bolt"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 33 28"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3.773 17.341L20.885 1.75l-2.297 8.909h8.184L9.66 26.25l2.297-8.909H3.773z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange900"
          style="font-weight: 700;"
        >
          COMMON.FEATURE.UPGRADEREQUIRED.TITLE
        </p>
        pipeline.featureRestriction.maxBuildsPerMonth100PercentLimit
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
        style="width: 130px;"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.explorePlans
        </span>
      </button>
    </div>
    <button
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
